--- a/buscemi-group-site-all/netlify.toml
+++ b/buscemi-group-site-all/netlify.toml
@@ -33,3 +33,25 @@
   from = "/404"
   to = "/404.html"
   status = 404
+
+  [[headers]]
+for = "/*"
+  [headers.values]
+  # Security headers
+  Content-Security-Policy = "default-src 'self'; img-src 'self' data: https:; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; connect-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests"
+  Referrer-Policy = "strict-origin-when-cross-origin"
+  Permissions-Policy = "accelerometer=(), ambient-light-sensor=(), autoplay=(), camera=(), clipboard-read=(), clipboard-write=(self), display-capture=(), encrypted-media=(), fullscreen=(self), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(self), publickey-credentials-get=(), usb=(), screen-wake-lock=()"
+  X-Content-Type-Options = "nosniff"
+  X-Frame-Options = "DENY"
+  Cross-Origin-Opener-Policy = "same-origin"
+  Cross-Origin-Resource-Policy = "same-origin"
+  Cross-Origin-Embedder-Policy = "require-corp"
+  # Performance
+  Cache-Control = "public, max-age=600, s-maxage=600"
+  Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
+
+[[headers]]
+for = "/assets/*"
+  [headers.values]
+  Cache-Control = "public, max-age=31536000, immutable"
+
