--- a/buscemi-group-site-all/netlify.toml
+++ b/buscemi-group-site-all/netlify.toml
@@ -55,3 +55,8 @@ for = "/assets/*"
   [headers.values]
   Cache-Control = "public, max-age=31536000, immutable"
 
+[[redirects]]
+  from = "https://www.buscemigroup.be/*"
+  to = "https://buscemigroup.be/:splat"
+  status = 301
+  force = true
