--- a/buscemi-group-site-all/netlify.toml
+++ b/buscemi-group-site-all/netlify.toml
@@ -1,62 +1,49 @@
+# netlify.toml — security headers + caching
 
+# (Optioneel) als je een build stap hebt, pas 'publish' aan.
 [build]
   publish = "."
-  command = ""
 
+# Algemene security headers
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "SAMEORIGIN"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-    Permissions-Policy = "accelerometer=(), autoplay=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()"
-    Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
-    Cache-Control = "public, max-age=3600"
-    Content-Security-Policy = "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; frame-ancestors 'self'"
+  Strict-Transport-Security      = "max-age=63072000; includeSubDomains; preload"
+  Referrer-Policy               = "strict-origin-when-cross-origin"
+  X-Content-Type-Options        = "nosniff"
+  X-Frame-Options               = "DENY"
+  X-XSS-Protection              = "0"
+  Permissions-Policy            = "geolocation=(), microphone=(), camera=(), interest-cohort=()"
+  Cross-Origin-Opener-Policy    = "same-origin"
+  Cross-Origin-Resource-Policy  = "same-origin"
+  X-DNS-Prefetch-Control        = "off"
 
+# Strikte CSP — werkt met jouw huidige setup (geen externe scripts)
+# Als je later externe bronnen toevoegt (fonts/analytics), moeten die hier worden toegestaan.
+[[headers]]
+  for = "/*"
+  [headers.values]
+  Content-Security-Policy = """
+    default-src 'self';
+    base-uri 'self';
+    script-src 'self';
+    style-src 'self' 'unsafe-inline';
+    img-src 'self' data: blob:;
+    font-src 'self';
+    connect-src 'self';
+    form-action 'self' https://*.netlify.app https://*.netlify.com;
+    frame-ancestors 'none';
+    upgrade-insecure-requests;
+  """
+
+# Lange cache voor statische assets (pas het pad aan als jij /assets of /static gebruikt)
 [[headers]]
   for = "/assets/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/style.css"
-  [headers.values]
-    Cache-Control = "public, max-age=604800"
-
-[[headers]]
-  for = "/*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=604800"
-
-[[redirects]]
-  from = "/404"
-  to = "/404.html"
-  status = 404
-
-  [[headers]]
-for = "/*"
-  [headers.values]
-  # Security headers
-  Content-Security-Policy = "default-src 'self'; img-src 'self' data: https:; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com data:; connect-src 'self'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests"
-  Referrer-Policy = "strict-origin-when-cross-origin"
-  Permissions-Policy = "accelerometer=(), ambient-light-sensor=(), autoplay=(), camera=(), clipboard-read=(), clipboard-write=(self), display-capture=(), encrypted-media=(), fullscreen=(self), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), midi=(), payment=(), picture-in-picture=(self), publickey-credentials-get=(), usb=(), screen-wake-lock=()"
-  X-Content-Type-Options = "nosniff"
-  X-Frame-Options = "DENY"
-  Cross-Origin-Opener-Policy = "same-origin"
-  Cross-Origin-Resource-Policy = "same-origin"
-  Cross-Origin-Embedder-Policy = "require-corp"
-  # Performance
-  Cache-Control = "public, max-age=600, s-maxage=600"
-  Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
-
-[[headers]]
-for = "/assets/*"
-  [headers.values]
   Cache-Control = "public, max-age=31536000, immutable"
 
-[[redirects]]
-  from = "https://www.buscemigroup.be/*"
-  to = "https://buscemigroup.be/:splat"
-  status = 301
-  force = true
+# Service worker zelf nooit keihard cachen
+[[headers]]
+  for = "/sw.js"
+  [headers.values]
+  Cache-Control = "no-cache"
